add next block cardio website

--- a/Cardio/index.html
+++ b/Cardio/index.html
@@ -13,37 +13,36 @@
 <body>
 
 <!-- Header -->
-
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-light navbar-style">
+			  <a class="navbar-brand" href="#">
+			  	<img class="logo" src="images/LOGO_ICON.png" alt="logo cardio">
+			  </a>
+			  <button class="navbar-toggler navbar-button" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			    <span class="navbar-toggler-icon"></span>
+			 </button>
+			  <div class="collapse navbar-collapse collapse-style" id="navbarNav">
+			    <ul class="navbar-nav">
+			      	<li class="nav-item">
+			        	<a class="nav-link" href="#">Intro <span class="sr-only">(current)</span></a>
+			      	</li>
+			      	<li class="nav-item">
+			       		 <a class="nav-link" href="#">Services</a>
+			      	</li>
+			      	<li class="nav-item">
+			        	<a class="nav-link" href="#">Team</a>
+			      	</li>
+			      	<li class="nav-item">
+			        	<a class="nav-link" href="#">Pricing</a>
+			      	</li>
+			      	<li class="nav-item active-style">
+			        	<a class="nav-link" href="#">Reservation</a>
+			      	</li>
+			   	</ul>
+			  </div>
+		</nav>
+	</header>
 	<div class="container-fluid header-bg wrapper">
-		<header>
-			<nav class="navbar navbar-expand-lg navbar-light navbar-style">
-			  	<a class="navbar-brand" href="#">
-			  		<img class="logo" src="images/LOGO_ICON.png" alt="logo cardio">
-			  	</a>
-			  	<button class="navbar-toggler navbar-button" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			    	<span class="navbar-toggler-icon"></span>
-			 	</button>
-			  	<div class="collapse navbar-collapse collapse-style" id="navbarNav">
-			    	<ul class="navbar-nav">
-			      		<li class="nav-item">
-			        		<a class="nav-link" href="#">Intro <span class="sr-only">(current)</span></a>
-			      		</li>
-			      		<li class="nav-item">
-			       			 <a class="nav-link" href="#">Services</a>
-			      		</li>
-			      		<li class="nav-item">
-			        		<a class="nav-link" href="#">Team</a>
-			      		</li>
-			      		<li class="nav-item">
-			        		<a class="nav-link" href="#">Pricing</a>
-			      		</li>
-			      		<li class="nav-item active-style">
-			        		<a class="nav-link" href="#">Reservation</a>
-			      		</li>
-			   		</ul>
-			  	</div>
-			</nav>
-		</header>
 		<h1 class="h1-style">Take care of your body.
 			<span class="text-style">It's the only place you have to live.<span class="span-style">|</span>
 			</span>
@@ -51,7 +50,7 @@
 
 <!-- Carousel -->
 
-		<div class="container">
+		<div class="container container-style">
 			<div class="row justify-content-center">
 				<div class="col-12 col-md-8 col-lg-4">
 					<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -63,18 +62,18 @@
 						<div class="carousel-inner">
 						    <div class="carousel-item active">
 						      	<img src="images/DSC_0001-Edit.jpg" class="d-block w-100" alt="cardio training">
-						      	<div class="carousel-caption d-md-block caption-style">
+						      	<div class="carousel-caption caption-style">
 						      		<h4>Today’s schedule</h4>
-						        	<div class="training-time">
-						       	 		<p class="text-justify">Early Exercise <span class="time-style">8:30 - 10:00</span></p>
-						       	 		<p class="text-justify text-border icon-gym">Muscle Building <span class="time-style">8:30 - 10:00</span></p>
-						       	 		<p class="text-justify icon-heart">Cardio <span class="time-style">8:30 - 10:00</span></p>
-						       	 	</div>
+						      		<ul class="training-time">
+						      			<li class="text-justify">Early Exercise <span class="time-style">8:30 - 10:00</span></li>
+						      			<li class="text-justify text-border icon-gym">Muscle Building <span class="time-style">8:30 - 10:00</span></li>
+						      			<li class="text-justify icon-heart">Cardio <span class="time-style">8:30 - 10:00</span></li>
+						      		</ul>
 						      </div>
 						    </div>
 						    <div class="carousel-item">
 						      	<img src="images/iStock_000019605577XLarge.jpg" class="d-block w-100" alt="cardio price">
-						      	<div class="carousel-caption d-md-block caption-style">
+						      	<div class="carousel-caption caption-style">
 						        	<h5 class="h5-style">Happy Clients</h5>
 						       	 	<p class="text-right-slid">I couldn’t be more happy with the results!</p>
 						       	 	<span class="text-light">Adam Jordan</span>
@@ -117,7 +116,7 @@
 						<div class="carousel-inner">
 						    <div class="carousel-item active">
 						    	<img src="images/iStock_000019605577XLarge.jpg" class="d-block w-100" alt="cardio price">
-						      	<div class="carousel-caption d-md-block caption-style">
+						      	<div class="carousel-caption caption-style">
 						      		<h5 class="h5-style">Happy Clients</h5>
 						        	<p class="text-right-slid">I couldn’t be more happy with the results!</p>
 						        	<span class="text-light">Adam Jordan</span>
@@ -125,7 +124,7 @@
 						    </div>
 						    <div class="carousel-item">
 						      	<img src="images/group-running.jpg" class="d-block w-100" alt="cardio reviews">
-						      	<div class="carousel-caption d-md-block caption-style">
+						      	<div class="carousel-caption caption-style">
 						        	<h5 class="h5-style">Happy Clients</h5>
 						        	<p class="text-right-slid">I couldn’t be more happy with the results!</p>
 						        	<span class="text-light">Adam Jordan</span>
@@ -133,7 +132,7 @@
 						    </div>
 						    <div class="carousel-item">
 						    	<img src="images/DSC_0001-Edit.jpg" class="d-block w-100" alt="cardio training">
-						      	<div class="carousel-caption d-md-block caption-style">
+						      	<div class="carousel-caption caption-style">
 						        	<h5 class="h5-style">Happy Clients</h5>
 						       	 	<p class="text-right-slid">I couldn’t be more happy with the results!</p>
 						       	 	<span class="text-light">Adam Jordan</span>
@@ -154,8 +153,41 @@
 
 <!-- Services -->
 
-	<section>
-		
+	<section class="services">
+		<h2 class="h2-style">Services 
+			<span class="items-text">Achieve the best results with our wide variety of trainings!</span>
+		</h2>
+		<div class="container">
+			<div class="row">
+				<div class="col-12 col-lg-4">
+					<div class="items">
+						<div class="items-hover">
+							<div class="icon-cardio"></div>
+							<h4 class="h4-style">Cardio Training</h4>
+							<p>A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-lg-4">	
+					<div class="items">
+						<div class="items-hover">
+							<div class="icon-yoga"></div>
+							<h4 class="h4-style">Yoga Pilates</h4>
+							<p>A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
+						</div>	
+					</div>
+				</div>	
+				<div class="col-12 col-lg-4">
+					<div class="items">
+						<div class="items-hover">
+							<div class="icon-power"></div>
+							<h4 class="h4-style">Power Training</h4>
+							<p>A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
+						</div>	
+					</div>
+				</div>
+			</div>
+		</div>	
 	</section>
 </body>
 </html>
