--- a/Cardio/index.html
+++ b/Cardio/index.html
@@ -189,5 +189,66 @@
 			</div>
 		</div>	
 	</section>
+
+<!-- Team -->
+
+	<section class="team">
+		<h2 class="h2-style">Team
+			<span class="items-text">We’re dream team!</span>
+		</h2>
+		<div class="container">
+			<div class="row">
+				<div class="col-12 col-lg-4">
+					<div class="team-block">
+						<div class="team-image">
+							<img src="images/COVER.jpg" class="img-fluid" alt="Eva Adamson Fitness Instructor">
+						</div>
+						<div class="team-hover">
+							<h6 class="h6-style">$69.00</h6>
+							<span class="text-hover">1 - 5 sessions / month</span>
+							<img class="image-circle" src="images/IMG_circle.png" alt="Eva Adamson Fitness Instructor">
+						</div>
+						<h4 class="h4-style">Eva Adamson
+							<span>Fitness Instructor</span>
+						</h4>
+						<button type="button" class="btn btn-primary button-style">Sign Up Now</button>
+					</div>
+				</div>
+				<div class="col-12 col-lg-4">
+					<div class="team-block">
+						<div class="team-image">
+							<img src="images/COVER2.jpg" class="img-fluid" alt="Nick Williams Personal Trainer">
+						</div>	
+						<div class="team-hover">
+							<h6 class="h6-style">$69.00</h6>
+							<span class="text-hover">1 - 5 sessions / month</span>
+							<img class="image-circle" src="images/IMG_circle2.png" alt="Nick Williams Personal Trainer">
+						</div>	
+						<h4 class="h4-style">Nick Williams
+							<span>Personal Trainer</span>
+						</h4>
+						<button type="button" class="btn btn-primary button-style">Sign Up Now</button>
+					</div>
+				</div>
+				<div class="col-12 col-lg-4">
+					<div class="team-block">					
+						<div class="team-image">
+							<img src="images/IMG3.jpg" class="img-fluid" alt="John Philips Personal Trainer">
+						</div>	
+						<div class="team-hover">
+							<h6 class="h6-style">$69.00</h6>
+							<span class="text-hover">1 - 5 sessions / month</span>
+							<img class="image-circle" src="images/IMG_circle3.png" alt="John Philips Personal Trainer">	
+						</div>
+						<h4 class="h4-style">John Philips
+							<span>Personal Trainer</span>
+						</h4>
+						<button type="button" class="btn btn-primary button-style">Sign Up Now</button>
+					</div>
+				</div>
+			</div>
+		</div>	
+
+	</section>
 </body>
 </html>
