add block pricing

--- a/Cardio/index.html
+++ b/Cardio/index.html
@@ -248,7 +248,40 @@
 				</div>
 			</div>
 		</div>	
-
 	</section>
+
+<!-- Section -->
+	
+	<section class="pricing">
+		<h2 class="h2-style">Pricing
+			<span class="items-text">Choose your favorite pricing plans, and sign up today!</span>
+		</h2>
+		<div class="container">
+			<div class="row row-cols-2 justify-content-end flex-lg-wrap flex-xl-wrap pricing-style">
+				<div class="col-8 col-sm-6 col-md-5 col-xl-4 pricing-blocks">
+					<h4 class="h4-style">Yoga Pilates</h4>
+					<b class="text-price">$850.00 <span class="text-light">/ year</span></b>
+					<button type="button" class="btn btn-primary button-style">Sign Up Now</button>
+				</div>
+				<div class="col-8 col-sm-6 col-md-5 col-lg-5 col-xl-4 pricing-blocks">
+					<ul class="programm-list">
+						<li>One Personal Trainer</li>
+						<li>Big gym space for training</li>
+						<li>Free tools & props</li>
+						<li>Free locker</li>
+						<li>Free before/after shower</li>
+					</ul>
+				</div>
+				<div class="w-100"></div>
+				<div class="col-8 col-sm-6 col-md-5 col-lg-5 col-xl-4 pricing-blocks">
+					<h4 class="h4-style">Cardio Training</h4>
+					<b class="text-price">$1000.00 <span class="text-light">/ year</span></b>
+					<button type="button" class="btn btn-primary button-style">Sign Up Now</button>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	
 </body>
 </html>
