--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    
-<!--Header   -->
+<!--Header-->
    
     <header>
         <div class="logo">
@@ -19,7 +19,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="#">Home</a></li>
-                <li><a href="#" id="about">About me</a></li>
+                <li><a href="#">About me</a></li>
                 <li><a href="#">Resume</a></li>
                 <li><a href="#">Works</a></li>
                 <li><a href="#">Contact</a></li>
@@ -38,5 +38,14 @@
             </div>
         </a>
     </div>
+    
+<!--About me-->
+   
+    <section class="about_me">
+
+    </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/script.js"
+    ></script>
 </body>
 </html>
