--- a/Everad_MACOSX/index.html
+++ b/Everad_MACOSX/index.html
@@ -26,8 +26,10 @@
 
 <!-- Main-contant -->
 
-    <main>
-        
+    <main class="main full-container">
+        <div class="wrapper">
+          
+        </div>
     </main>
 
   </body>
