feat: add block main

--- a/Everad_MACOSX/index.html
+++ b/Everad_MACOSX/index.html
@@ -27,9 +27,63 @@
 <!-- Main-contant -->
 
     <main class="main full-container">
-        <div class="wrapper">
-          
+      <div class="wrapper">
+        <h2 class="heading-text">Суши-шмастер - лучшее, что есть в твоем городе Порадуй себя и своих родных и близких</h2>
+        <p class="subtext">Ниже представлены наши  самые популярные позиции за последние полгода работы на карантине</p>
+        <h3 class="title-text">Актуальные позиции</h3>
+        <div class="set-menu">
+          <figure class="cards green-rolls">
+            <img src="images/s3.png" alt="Greenball roll">
+            <figcaption class="cards-description">
+              <h4 class="description-title">
+                Гринболь ролл
+              </h4>
+              <p class="description-subtext">
+                Закажи сей вкусный ролл, Он украсит ваший стол, Он порадует ваш глаз, Получи скорей экстаз!
+              </p>
+              <a class="active description-link" href="#">Заказать</a>
+            </figcaption>
+          </figure>
+
+          <figure class="cards orange-rolls">
+            <img src="images/s1.png" alt="Oranjade roll">
+            <figcaption class="cards-description">
+              <h4 class="description-title">
+                Оранжад ролл
+              </h4>
+              <p class="description-subtext">
+                Закажи сей вкусный ролл, Он украсит ваший стол, Он порадует ваш глаз, Получи скорей экстаз!
+              </p>
+              <a class="description-link" href="#">Недоступно к заказу</a>
+            </figcaption>
+          </figure>
+
+          <figure class="cards brown-rolls">
+            <img src="images/s2.png" alt="Brownie roll">
+            <figcaption class="cards-description">
+              <h4 class="description-title">
+                Брауни ролл
+              </h4>
+              <p class="description-subtext">
+                Закажи сей вкусный ролл, Он украсит ваший стол, Он порадует ваш глаз, Получи скорей экстаз!
+              </p>
+              <a class="description-link" href="#">Недоступно к заказу</a>
+            </figcaption>
+          </figure>
+
+          <figure class="cards-set">
+            <h4 class="description-title">
+              Синергетический сет
+            </h4>
+            <img src="images/s44.png" alt="synergistic-set">
+            <p class="description-subtext">А для абитуриентов у нас есть масса комплиментов!</p>
+            <img src="images/s45.png" alt="Skarbowskj set">
+            <h4 class="description-title">
+              Скарбовский сет
+            </h4>
+          </figure>
         </div>
+      </div>
     </main>
 
   </body>
