feat: add screen 1200px

--- a/Everad_MACOSX/index.html
+++ b/Everad_MACOSX/index.html
@@ -35,10 +35,10 @@
         <h3 class="title-text">Актуальные позиции</h3>
         <div class="set-menu">
           <figure class="cards green-rolls">
-            <img src="images/s3.webp" alt="Greenball roll">
+            <img src="images/s3.webp" alt="Grenoble roll">
             <figcaption class="cards-description">
               <h4 class="description-title">
-                Гринболь ролл
+                Гринобль ролл
               </h4>
               <p class="description-subtext">
                 Закажи сей вкусный ролл, Он украсит ваший стол, Он порадует ваш глаз, Получи скорей экстаз!
@@ -64,7 +64,7 @@
             <img src="images/s2.webp" alt="Brownie roll">
             <figcaption class="cards-description">
               <h4 class="description-title">
-                Брауни ролл
+                Брауни рол
               </h4>
               <p class="description-subtext">
                 Закажи сей вкусный ролл, Он украсит ваший стол, Он порадует ваш глаз, Получи скорей экстаз!
@@ -78,7 +78,8 @@
               Синергетический сет
             </h4>
             <img src="images/s44.webp" alt="synergistic-set">
-            <p class="description-subtext">А для абитуриентов у нас есть масса комплиментов!</p>
+            <p class="description-subtext">А для абитуриентов
+              у нас есть масса комплиментов!</p>
             <img src="images/s45.webp" alt="Skarbowskj set">
             <h4 class="description-title">
               Скарбовский сет
@@ -99,10 +100,10 @@
               <img src="images/corousel_img.webp" alt="shrimp promotion">
             </div>
             <div class="swiper-slide">
-              <img src="images/corousel_img.webp" alt="shrimp promotion">
+              <img src="images/dorado.webp" alt="dorado promotion">
             </div>
             <div class="swiper-slide">
-              <img src="images/corousel_img.webp" alt="shrimp promotion">
+              <img src="images/vodka.webp" alt="vodka promotion">
             </div>
           </div>
           <div class="navigation-btn flex-block">
