--- a/Everad_MACOSX/index.html
+++ b/Everad_MACOSX/index.html
@@ -5,20 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Суши-мастер</title>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="style/style.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+    <link rel="stylesheet" href="style/style.css" />
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script/script.js" defer></script>
   </head>
   <body>
-
-<!-- Header -->
+    <!-- Header -->
 
     <header class="header full-container">
       <div class="wrapper flex-block">
         <div class="logo">
           <a class="logo-link flex-block" href="#">
-            <img class="logo-img" src="images/clown-fish.webp" alt="logo Sushi-shmaster" />
+            <img
+              class="logo-img"
+              src="images/clown-fish.webp"
+              alt="logo Sushi-shmaster"
+            />
             <h1 class="heading">Суши-шмастер</h1>
           </a>
         </div>
@@ -26,70 +32,71 @@
       </div>
     </header>
 
-<!-- Main-contant -->
+    <!-- Main-contant -->
 
     <main class="main full-container">
       <div class="wrapper">
-        <h2 class="heading-text">Суши-шмастер - лучшее, что есть в твоем городе Порадуй себя и своих родных и близких</h2>
-        <p class="subtext">Ниже представлены наши  самые популярные позиции за последние полгода работы на карантине</p>
+        <h2 class="heading-text">
+          Суши-шмастер - лучшее, что есть в твоем городе Порадуй себя и своих
+          родных и близких
+        </h2>
+        <p class="subtext">
+          Ниже представлены наши самые популярные позиции за последние полгода
+          работы на карантине
+        </p>
         <h3 class="title-text">Актуальные позиции</h3>
         <div class="set-menu">
           <figure class="cards green-rolls">
-            <img src="images/s3.webp" alt="Grenoble roll">
+            <img src="images/s3.webp" alt="Grenoble roll" />
             <figcaption class="cards-description">
-              <h4 class="description-title">
-                Гринобль ролл
-              </h4>
+              <h4 class="description-title">Гринобль ролл</h4>
               <p class="description-subtext">
-                Закажи сей вкусный ролл, Он украсит ваший стол, Он порадует ваш глаз, Получи скорей экстаз!
+                Закажи сей вкусный ролл, Он украсит ваший стол, Он порадует ваш
+                глаз, Получи скорей экстаз!
               </p>
               <a class="active description-link" href="#">Заказать</a>
             </figcaption>
           </figure>
 
           <figure class="cards orange-rolls">
-            <img src="images/s1.webp" alt="Oranjade roll">
+            <img src="images/s1.webp" alt="Oranjade roll" />
             <figcaption class="cards-description">
-              <h4 class="description-title">
-                Оранжад ролл
-              </h4>
+              <h4 class="description-title">Оранжад ролл</h4>
               <p class="description-subtext">
-                Закажи сей вкусный ролл, Он украсит ваший стол, Он порадует ваш глаз, Получи скорей экстаз!
+                Закажи сей вкусный ролл, Он украсит ваший стол, Он порадует ваш
+                глаз, Получи скорей экстаз!
               </p>
               <a class="description-link" href="#">Недоступно к заказу</a>
             </figcaption>
           </figure>
 
           <figure class="cards brown-rolls">
-            <img src="images/s2.webp" alt="Brownie roll">
+            <img src="images/s2.webp" alt="Brownie roll" />
             <figcaption class="cards-description">
-              <h4 class="description-title">
-                Брауни рол
-              </h4>
+              <h4 class="description-title">Брауни рол</h4>
               <p class="description-subtext">
-                Закажи сей вкусный ролл, Он украсит ваший стол, Он порадует ваш глаз, Получи скорей экстаз!
+                Закажи сей вкусный ролл, Он украсит ваший стол, Он порадует ваш
+                глаз, Получи скорей экстаз!
               </p>
               <a class="description-link" href="#">Недоступно к заказу</a>
             </figcaption>
           </figure>
 
           <figure class="cards-set">
-            <h4 class="description-title">
-              Синергетический сет
-            </h4>
-            <img src="images/s44.webp" alt="synergistic-set">
-            <p class="description-subtext">А для абитуриентов
-              у нас есть масса комплиментов!</p>
-            <img src="images/s45.webp" alt="Skarbowskj set">
-            <h4 class="description-title">
-              Скарбовский сет
-            </h4>
+            <h4 class="description-title">Синергетический сет</h4>
+            <img src="images/s44.webp" alt="synergistic-set" />
+            <p class="description-subtext">
+              А для абитуриентов 
+              у нас есть масса комплиментов!
+            </p>
+            <img src="images/s45.webp" alt="Skarbowskj set" />
+            <h4 class="description-title">Скарбовский сет</h4>
           </figure>
         </div>
       </div>
     </main>
 
-<!-- Carousel -->
+    <!-- Carousel -->
 
     <section class="full-container section-carousel">
       <div class="wrapper">
@@ -97,13 +104,13 @@
         <div class="swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="images/corousel_img.webp" alt="shrimp promotion">
+              <img src="images/corousel_img.webp" alt="shrimp promotion" />
             </div>
             <div class="swiper-slide">
-              <img src="images/dorado.webp" alt="dorado promotion">
+              <img src="images/dorado.webp" alt="dorado promotion" />
             </div>
             <div class="swiper-slide">
-              <img src="images/vodka.webp" alt="vodka promotion">
+              <img src="images/vodka.webp" alt="vodka promotion" />
             </div>
           </div>
           <div class="navigation-btn flex-block">
@@ -115,7 +122,7 @@
       </div>
     </section>
 
-<!-- Footer -->
+    <!-- Footer -->
 
     <footer class="footer full-container">
       <div class="wrapper">
